initial html for about me

--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <title>Tari's Wold</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
 
 
 <div class  = "heading"> 
-<h1>Welcome to Tari's World </h1>
-<h3> Come learn a little bit about me! </h3>
+<h1> Welcome to Starfigher!  </h1>
+<h3> Choose your champion...</h3>
+</div>
+
+<div class = "bio"> 
+    <h3> Player Background </h3>
+    <ul> 
+        <li> My name is Nefertari Jones aka "Tari" </li>
+        <li> I grew up on Long Island, New York</li>
+        <li> I go to New York University! </li>
+    </ul>
+</div>
+
+<div class = "image"> 
+    <h3> Player Photo </h3>
+    <img src = "tari-photo.jpeg" > 
+</div>
+
+
+<div class = "class"> 
+    <h3> Player Class: Coding Warrior </h3>
+    <p> I started my KWK journey as a web-dev scholar and the next summer I came back for the mobile development course. I loved KWK so much that I came back for two summers as a web dev IA. Since then I have been strengthening my coding super powers 
+        as a Computer Science and Cinema Studies major. </p>
+</div>
+
+<div class = "special-interest"> 
+    <h3> Special Interest: Movies! </h3>
+    <p> Hint! Click the photo to see one of Tari's favorite movies. </p>
+ <img src = "sinners-photo.jpeg" > 
 
 </div>
+
 </body>
 
 
